@@ -68,7 +68,7 @@ is_deeply $cursor->build_query(1),
   'right query';
 is_deeply $cursor->query, {'$query' => {foo => 'bar'}, '$foo' => 'bar'},
   'query has not changed';
-$cursor = $collection->find({})->comment('Test!')->timeout(500);
+$cursor = $collection->find({})->comment('Test!')->max_time_ms(500);
 is_deeply $cursor->build_query,
   {'$query' => {}, '$comment' => 'Test!', '$maxTimeMS' => 500}, 'right query';
 
@@ -81,7 +81,8 @@ my $doc = $cursor->next;
 ok defined $cursor->id, 'has a cursor id';
 ok $doc->{test}, 'right document';
 my $clone
-  = $cursor->snapshot(1)->hint({test => 1})->timeout(500)->tailable(1)->clone;
+  = $cursor->snapshot(1)->hint({test => 1})->max_time_ms(500)->tailable(1)
+  ->clone;
 isnt $cursor, $clone, 'different objects';
 ok !defined $clone->id, 'has no cursor id';
 is $clone->batch_size, 2,      'right batch size';
@@ -90,11 +91,11 @@ is_deeply $clone->fields, {test => 1}, 'right fields';
 is_deeply $clone->hint,   {test => 1}, 'right hint value';
 is $clone->limit, 3, 'right limit';
 is_deeply $clone->query, {test => {'$exists' => 1}}, 'right query';
-is $clone->skip,     1,   'right skip value';
-is $clone->snapshot, 1,   'right snapshot value';
-is $clone->max_scan, 100, 'right max_scan value';
-is $clone->timeout,  500, 'right timeout value';
-is $clone->tailable, 1,   'is tailable';
+is $clone->skip,        1,   'right skip value';
+is $clone->snapshot,    1,   'right snapshot value';
+is $clone->max_scan,    100, 'right max_scan value';
+is $clone->max_time_ms, 500, 'right max_time_ms value';
+is $clone->tailable,    1,   'is tailable';
 is_deeply $clone->sort, {test => 1}, 'right sort value';
 $cursor = $collection->find({foo => 'bar'}, {foo => 1});
 is_deeply $cursor->clone->query,  {foo => 'bar'}, 'right query';
